Fix execution counts and output messages in model evaluation cells

--- a/Notebook/surabaya_house_price_prediction.ipynb
+++ b/Notebook/surabaya_house_price_prediction.ipynb
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "749c15ff",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,9 @@
      "output_type": "stream",
      "text": [
       "Proses Grid Search dimulai...\n",
-      "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n"
+      "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n",
+      "Proses fitting model selesai.\n",
+      "Model terbaik ditemukan.\n"
      ]
     }
    ],
@@ -1291,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "882bb8fc",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "bbd4cb00",
    "metadata": {},
    "outputs": [],
@@ -1400,19 +1402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "4ca35e7b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[77]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m r2_score_1 = \u001b[43mr2_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m mse_1 = mean_squared_error(y_test, y_pred)\n\u001b[32m      3\u001b[39m rmse_1 = root_mean_squared_error(y_test, y_pred)\n",
-      "\u001b[31mTypeError\u001b[39m: 'float' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.7199889403790585\n",
+      "Hasil MSE model machine learning:  5.804028447286372e+18\n",
+      "Hasil RMSE model machine learning:  2409155131.4281054\n"
      ]
     }
    ],
@@ -1441,7 +1441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_features_s2 = 12\n",
+    "n_features_s2 = 14\n",
     "features_strategy_2 = feature_importances.head(n_features_s2).index.tolist()\n",
     "\n",
     "X = surabaya_house_data[features_strategy_2]\n",
@@ -1463,19 +1463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "ff8a7fc6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[74]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m r2_score = \u001b[43mr2_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m mse = mean_squared_error(y_test, y_pred)\n\u001b[32m      3\u001b[39m rmse = root_mean_squared_error(y_test, y_pred)\n",
-      "\u001b[31mTypeError\u001b[39m: 'float' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.7199889403790585\n",
+      "Hasil MSE model machine learning:  5.804028447286372e+18\n",
+      "Hasil RMSE model machine learning:  2409155131.4281054\n"
      ]
     }
    ],
@@ -1499,20 +1497,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "19e5ff3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "threshold = 0.005\n",
     "\n",
-    "features_strategy_3 = feature_importances[feature_importances['Importance'] > threshold].index.tolist()\n",
+    "features_strategy_3 = feature_importances[feature_importances['Importances'] > threshold].index.tolist()\n",
     "\n",
     "X = surabaya_house_data[features_strategy_3]\n",
     "y = surabaya_house_data['Price']\n",
     "\n",
     "best_model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)"
+    "y_pred = best_model.predict(X_test)"
    ]
   },
   {
@@ -1525,10 +1523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "3149d43e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.7165611666979775\n",
+      "Hasil MSE model machine learning:  5.875078840734348e+18\n",
+      "Hasil RMSE model machine learning:  2423856192.255297\n"
+     ]
+    }
+   ],
    "source": [
     "r2_score_3 = r2_score(y_test, y_pred)\n",
     "mse_3 = mean_squared_error(y_test, y_pred)\n",
