Update feature selection description for Scheme 2 to use 14 features

--- a/Notebook/surabaya_house_price_prediction.ipynb
+++ b/Notebook/surabaya_house_price_prediction.ipynb
@@ -1431,7 +1431,7 @@
    "id": "4621f571",
    "metadata": {},
    "source": [
-    "Skema 2 - Menggunakan 10 - 12 fitur"
+    "Skema 2 - Menggunakan 14 fitur"
    ]
   },
   {
