Add hyperparameter tuning for Random Forest and Gradient Boosting models; update feature selection to use 16 features in Scheme 2

--- a/Notebook/surabaya_house_price_prediction.ipynb
+++ b/Notebook/surabaya_house_price_prediction.ipynb
@@ -1253,6 +1253,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5b366bd",
+   "metadata": {},
+   "source": [
+    "Hyperparameter for Random Forest Regressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "id": "749c15ff",
@@ -1289,6 +1297,24 @@
     "print('Proses fitting model selesai.')\n",
     "best_model = grid_search.best_estimator_\n",
     "print('Model terbaik ditemukan.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "844e5c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paramater terbaik: {'max_depth': None, 'min_samples_leaf': 2, 'min_samples_split': 2, 'n_estimators': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Paramater terbaik: {grid_search.best_params_}')"
    ]
   },
   {
@@ -1431,17 +1457,17 @@
    "id": "4621f571",
    "metadata": {},
    "source": [
-    "Skema 2 - Menggunakan 14 fitur"
+    "Skema 2 - Menggunakan 16 fitur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "1346c8cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_features_s2 = 14\n",
+    "n_features_s2 = 16\n",
     "features_strategy_2 = feature_importances.head(n_features_s2).index.tolist()\n",
     "\n",
     "X = surabaya_house_data[features_strategy_2]\n",
@@ -1463,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 129,
    "id": "ff8a7fc6",
    "metadata": {},
    "outputs": [
@@ -1471,9 +1497,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil R2 Score model machine learning:  0.7199889403790585\n",
-      "Hasil MSE model machine learning:  5.804028447286372e+18\n",
-      "Hasil RMSE model machine learning:  2409155131.4281054\n"
+      "Hasil R2 Score model machine learning:  0.7237732215212753\n",
+      "Hasil MSE model machine learning:  5.725588419125734e+18\n",
+      "Hasil RMSE model machine learning:  2392820181.1096745\n"
      ]
     }
    ],
@@ -1497,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 135,
    "id": "19e5ff3d",
    "metadata": {},
    "outputs": [],
@@ -1508,6 +1534,8 @@
     "\n",
     "X = surabaya_house_data[features_strategy_3]\n",
     "y = surabaya_house_data['Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "best_model.fit(X_train, y_train)\n",
     "y_pred = best_model.predict(X_test)"
@@ -1523,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 136,
    "id": "3149d43e",
    "metadata": {},
    "outputs": [
@@ -1531,9 +1559,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hasil R2 Score model machine learning:  0.7165611666979775\n",
-      "Hasil MSE model machine learning:  5.875078840734348e+18\n",
-      "Hasil RMSE model machine learning:  2423856192.255297\n"
+      "Hasil R2 Score model machine learning:  0.7169218394520483\n",
+      "Hasil MSE model machine learning:  5.867602868436604e+18\n",
+      "Hasil RMSE model machine learning:  2422313536.360767\n"
      ]
     }
    ],
@@ -1545,6 +1573,272 @@
     "print('Hasil R2 Score model machine learning: ', r2_score_3)\n",
     "print('Hasil MSE model machine learning: ', mse_3)\n",
     "print('Hasil RMSE model machine learning: ', rmse_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff43bbbc",
+   "metadata": {},
+   "source": [
+    "Train and Test Data with GradientBoosting Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "4bd16292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2040816e",
+   "metadata": {},
+   "source": [
+    "Hyperparameter Tuning for GBoosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "2380f9cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyperparameter dimulai ....\n",
+      "Sabar yaa agak lama soalnya\n",
+      "Fitting 5 folds for each of 24 candidates, totalling 120 fits\n",
+      "Proses hyperparameter akhirnya selesai!\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = surabaya_house_data.drop(columns='Price')\n",
+    "y = surabaya_house_data['Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model_GB = GradientBoostingRegressor(random_state=42)\n",
+    "\n",
+    "param_grid_GB = {\n",
+    "  'n_estimators':[200],\n",
+    "  'learning_rate':[0.01, 0.1],\n",
+    "  'max_depth':[10,20,None],\n",
+    "  'min_samples_split': [2, 5],\n",
+    "  'min_samples_leaf': [1, 2]\n",
+    "}\n",
+    "\n",
+    "grid_search_GB = GridSearchCV(\n",
+    "  model_GB,\n",
+    "  param_grid=param_grid_GB,\n",
+    "  cv=5,\n",
+    "  n_jobs=-1,\n",
+    "  verbose=2\n",
+    ")\n",
+    "\n",
+    "print('Hyperparameter dimulai ....')\n",
+    "print('Sabar yaa agak lama soalnya')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "best_model_GB = grid_search.best_estimator_\n",
+    "print('Proses hyperparameter akhirnya selesai!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "db0572af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter terbaik: {'max_depth': None, 'min_samples_leaf': 2, 'min_samples_split': 2, 'n_estimators': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Parameter terbaik: {grid_search.best_params_}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "532dbab8",
+   "metadata": {},
+   "source": [
+    "Skema 1 - 6 Fitur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "c06b324a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = surabaya_house_data[features_strategy_1]\n",
+    "y = surabaya_house_data['Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "best_model_GB.fit(X_train, y_train)\n",
+    "y_pred = best_model_GB.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9895f1e2",
+   "metadata": {},
+   "source": [
+    "Evaluasi Model Skema 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "4c0ccc14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.6986987820258376\n",
+      "Hasil MSE model machine learning:  6.245327747737588e+18\n",
+      "Hasil RMSE model machine learning:  2499065374.8426805\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_score_1_GB = r2_score(y_test, y_pred)\n",
+    "mse_1_GB = mean_squared_error(y_test, y_pred)\n",
+    "rmse_1_GB = root_mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "print('Hasil R2 Score model machine learning: ', r2_score_1_GB)\n",
+    "print('Hasil MSE model machine learning: ', mse_1_GB)\n",
+    "print('Hasil RMSE model machine learning: ', rmse_1_GB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a2896a9",
+   "metadata": {},
+   "source": [
+    "Skema 2 - 16 Fitur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "adb05a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = surabaya_house_data[features_strategy_2]\n",
+    "y = surabaya_house_data['Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "best_model_GB.fit(X_train, y_train)\n",
+    "y_pred = best_model_GB.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c822506",
+   "metadata": {},
+   "source": [
+    "Evaluasi Model Skema 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "23640bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.7237732215212753\n",
+      "Hasil MSE model machine learning:  5.725588419125734e+18\n",
+      "Hasil RMSE model machine learning:  2392820181.1096745\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_score_2_GB = r2_score(y_test, y_pred)\n",
+    "mse_2_GB = mean_squared_error(y_test, y_pred)\n",
+    "rmse_2_GB = root_mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "print('Hasil R2 Score model machine learning: ', r2_score_2_GB)\n",
+    "print('Hasil MSE model machine learning: ', mse_2_GB)\n",
+    "print('Hasil RMSE model machine learning: ', rmse_2_GB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "653e5b2f",
+   "metadata": {},
+   "source": [
+    "Skema 3 - >=20 Fitur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "2bf6ba4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = surabaya_house_data[features_strategy_3]\n",
+    "y = surabaya_house_data['Price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "best_model_GB.fit(X_train, y_train)\n",
+    "y_pred = best_model_GB.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1629c1f3",
+   "metadata": {},
+   "source": [
+    "Evaluasi Model Skema 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "1db56841",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil R2 Score model machine learning:  0.7169218394520483\n",
+      "Hasil MSE model machine learning:  5.867602868436604e+18\n",
+      "Hasil RMSE model machine learning:  2422313536.360767\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2_score_3_GB = r2_score(y_test, y_pred)\n",
+    "mse_3_GB = mean_squared_error(y_test, y_pred)\n",
+    "rmse_3_GB = root_mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "print('Hasil R2 Score model machine learning: ', r2_score_3_GB)\n",
+    "print('Hasil MSE model machine learning: ', mse_3_GB)\n",
+    "print('Hasil RMSE model machine learning: ', rmse_3_GB)"
    ]
   }
  ],
